--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
     <h1 class="h2">Dashboard</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group me-2">
-            <button type="button" class="btn btn-custom" data-bs-toggle="modal" data-bs-target="#updateModal">
-                <i class="bi bi-arrow-clockwise"></i> Update Research
-            </button>
+            <span class="badge bg-success">
+                <i class="bi bi-robot"></i> Auto-updates every Monday
+            </span>
         </div>
     </div>
 </div>
